--- a/fzHUSTtrans/MyfzHUSTtrans/readme
+++ b/fzHUSTtrans/MyfzHUSTtrans/readme
@@ -1,2 +1,2 @@
 This is the tex and pdf file I finished for the translation task 
-at Huazhong University of Science and Technology on 21/Feb/2019.
+at Huazhong University of Science and Technology on 2 Feb in 2019.
