--- a/fzHUSTtrans/README
+++ b/fzHUSTtrans/README
@@ -1,2 +1,4 @@
-The files in this folder is special for the translation task at Huazhong University of Science and Technology.
-Please read the fzHUSTtrans.pdf first which contains the details instruction of this LaTeX template.
+The files in this folder is created for the reference translation task at Huazhong University of Science and Technology.
+
+Before you start typing your Chinese translation into the tex file, 
+please read the instruction of this LaTeX template contained in the fzHUSTtrans.pdf first.
