--- a/fzHUSTtrans/MyfzHUSTtrans/readme
+++ b/fzHUSTtrans/MyfzHUSTtrans/readme
@@ -1,2 +1,4 @@
-This is the tex and pdf file I finished for the translation task 
-at Huazhong University of Science and Technology on 2 Feb in 2019.
+This is the tex and pdf file I finished for my own translation task 
+at Huazhong University of Science and Technology on 2 Feb in 2019. 
+
+Only for academical sharing use!
