--- a/fzHUSTtrans/README
+++ b/fzHUSTtrans/README
@@ -1,4 +1,4 @@
-The files in this folder is created for the reference translation task at Huazhong University of Science and Technology.
+The files in this folder are created for the reference translation task at Huazhong University of Science and Technology.a
 
 Before you start typing your Chinese translation into the tex file, 
 please read the instruction of this LaTeX template contained in the fzHUSTtrans.pdf first.
