--- a/HUSTthesis/HUSTthesis.tex
+++ b/HUSTthesis/HUSTthesis.tex
@@ -51,6 +51,7 @@
 \usepackage{ctex}		 	% If you are lazy, the CTEX suit is enough.
 % Chinese Font
 \usepackage{xeCJK}		 	% For the Chinese through XeLaTex
+\CJKfontspec{SimSun} 
 \setCJKmainfont{SimSun} 	% set the mainfont of Chinese as songti. (serif) for  
 \setCJKsansfont{SimSun} 	% sans serif font for \textsf
 \setCJKmonofont{SimSun} 	% monospace font for \texttt
@@ -403,7 +404,7 @@
 \author{冯洲}					% 姓名
 \def\stunum{U201510104} 	  % 学号
 \def\instructor{谭波}			% 指导老师
-\date{2019-}   			  % 日期，自己填就可以了
+\date{\today}   			  % 日期，自己填就可以了
 
 %-------------quickinput----------------%
 % 利用\newcommand{cmd}{def} 设置一些常用的代码，提高效率，这里可以自行删除，下面是我敲翻译时候打的一些command。
