update the template titlepage

--- a/HUSTopening/HUSTopening.tex
+++ b/HUSTopening/HUSTopening.tex
@@ -219,16 +219,10 @@
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE 标题页
 %----------------------------------------------------------------------------------------
-
-\title[开题答辩]{Bernoulli卷积的性质 \\ \small{毕业设计开题答辩}} % The short title appears at the bottom of every slide, the full title is only on the title page
-
-\author{冯洲} % Your name
-\institute[HUST] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
-{
-华中科技大学 \\ % Your institution for the title page
-\medskip
-\textit{U201510104@hust.edu.cn} % Your email address
-}
+\title[开题答辩]{标题} % The short title appears at the bottom of every slide, the full title is only on the title page
+\subtitle{副标题}
+\author{姓名} % Your name
+\institute[HUST]{华中科技大学} % Your institution for the title page
 \date{\today} % Date, can be changed to a custom date
 
 \begin{document}
@@ -276,8 +270,6 @@
 		如果$ \nu_{\beta} $奇异，那么是否一定有$ \beta $为Pisot数?
 	\end{block}
 \end{frame}
-
-
 
 
 %------------------------------------------------
