update the repo info

--- a/HUSTtrans/HUSTtrans.tex
+++ b/HUSTtrans/HUSTtrans.tex
@@ -54,7 +54,7 @@
  \setCJKmainfont{SimSun} % set the mainfont of Chinese as songti. (serif) for  
  \setCJKsansfont{SimSun} % sans serif font for \textsf
  \setCJKmonofont{SimSun} % monospace font for \texttt
- \punctstyle{kaiming}   % Remove the space used by symbols like comma. Special for the mainland students like us HUSTers.
+ % \punctstyle{kaiming}   % Remove the space used by symbols like comma. Special for the mainland students like us HUSTers.
  \setCJKfamilyfont{song}{SimSun}                             %宋体 song
  \newcommand{\song}{\CJKfamily{song}}                        
  \setCJKfamilyfont{kai}{KaiTi}                        		 %楷体2312  kai
@@ -374,7 +374,7 @@ $ \times\times\times\times\times\times\times\times\times\times\times\times\times
 \section{使用说明}\seccontent
 \begin{description}
 	\seccontent
-	\item[基本信息] 作者：冯洲 \href{mailto:fengzhou1113@gmail.com}{fengzhou1113@gmail.com}. 版本信息：2019/1/23, v1.0发布在 \url{https://github.com/frenzy666}。 如果有任何建议及纠正，欢迎邮件联系作者，非常感谢！
+	\item[基本信息] 作者：冯洲 \href{mailto:fengzhou1113@gmail.com}{fengzhou1113@gmail.com}. 版本信息：2019/1/23, v1.0发布在 \url{https://github.com/zfengg/HUSTtex}。 如果有任何建议及纠正，欢迎邮件联系作者，非常感谢！
 	\item[必备条件]  安装最新版本的 [TeXLive](\url{http://www.tug.org/texlive/})（推荐）或 [MiKTeX](\url{http://miktex.org/})。请确保所有宏包都更新至最新。由于中文支持利用的是包\textbf{XeCJK}，编译器请使用 Xe\LaTeX。 编辑器推荐TeXStudio(\url{http://texstudio.sourceforge.net/}). 此文件在windows平台上测试成功，其他平台如Linux，mac没试过，哈哈哈！
 	\item[章节内部及其他环境内部的格式] 请在每个环境或章节后添加 $\backslash$seccontent (5号宋体，1.5倍行距)。 例如：\begin{verbatim} 
 	 \section \seccontent
